--- a/cng_mobile_AR.html
+++ b/cng_mobile_AR.html
@@ -37,7 +37,7 @@
                             <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                             <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
                             <a class="dropdown-item" href="cylinders_test_AR.html">مركز اختبار الأسطوانات</a>
-                        </div>
+                        </div> 
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -82,7 +82,7 @@
                                     <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                                     <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
                                     <a class="dropdown-item" href="cylinders_test_AR.html">مركز اختبار الأسطوانات</a>
-                                </div>
+                                </div> 
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -142,8 +142,8 @@
             <h2 data-wow-delay="0.2s" class="wow aboutCngMobileHeader">عن <span>CNG</span> موبايل</h2>
             <p data-wow-delay="0.4s" class="wow">هو نص شكلي لا معنى له، يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة لغوياً. الغرض الأساسي  منه هو عرض أشكال النصوص وأحجامها وألوانها دون الاهتمام بالمحتوى . هو نص شكلي لا معنى له،  يتكون من أحرف متتابعة بطريقة عشوائية غير مفهومة منه هو عرض أشكال النصوص</p>
             <div data-wow-delay="0.6s" class="wow row imgVideoContainer justify-content-center align-items-center">
-                <img src="images/play_icon.png" class="playIconVideo" alt="">
-                <a href="#">
+                <a href="#" class="d-flex align-items-center justify-content-center">
+                    <img src="images/play_icon.png" class="playIconVideo" alt="">
                     <img src="images/carInNature.png" alt="">
                 </a>
             </div>
@@ -186,8 +186,8 @@
                 </div>
             </div>
             <div data-wow-delay="0.4s" class="wow row imgVideoContainer justify-content-center align-items-center">
-                <img src="images/play_icon.png" class="playIconVideo" alt="">
-                <a href="#" class="col-10 col-lg-11"> 
+                <a href="#" class="col-10 col-lg-11 d-flex align-items-center justify-content-center"> 
+                    <img src="images/play_icon.png" class="playIconVideo" alt="">
                     <img src="images/carInNature.png" alt="">
                 </a>
             </div>
