--- a/cng_mobile_EN.html
+++ b/cng_mobile_EN.html
@@ -25,15 +25,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index_EN.html">Main</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="briefAboutCompany_EN.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            About Company
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="briefAboutCompany_EN.html">About us</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ourServicesDropDown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Our Services
                         </a>
@@ -44,8 +39,8 @@
                             <a class="dropdown-item" href="cylinders_test_EN.html">Cylinder Test Center</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="nav-item dropdown ourPartinersDropDown">
+                        <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Partiners
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -60,7 +55,7 @@
                         <a class="nav-link" href="jobs_EN.html">Jobs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cng_stations_EN.html">Contact Us</a>
+                        <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_EN.html">HSSE</a>
@@ -75,15 +70,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="index_EN.html">Main</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="briefAboutCompany_EN.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    About Company
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="briefAboutCompany_EN.html">About us</a>
-                                </div>
+                            <li class="nav-item">
+                                <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown ourServicesDropDown">
                                 <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Our Services
                                 </a>
@@ -94,8 +84,8 @@
                                     <a class="dropdown-item" href="cylinders_test_EN.html">Cylinder Test Center</a>
                                 </div>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <li class="nav-item dropdown ourPartinersDropDown">
+                                <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Partiners
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -110,7 +100,7 @@
                                 <a class="nav-link" href="jobs_EN.html">Jobs</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="cng_stations_EN.html">Contact Us</a>
+                                <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_EN.html">HSSE</a>
@@ -152,8 +142,8 @@
             <h2 data-wow-delay="0.2s" class="wow aboutCngMobileHeader">About <span>CNG</span> Mobile</h2>
             <p data-wow-delay="0.4s" class="wow">It is a dummy text that is meaningless, consisting of randomly incomprehensible linguistically incomprehensible letters. Its primary purpose is to display text shapes, sizes, and colors without concern for the content. It is a meaningless formal text, consisting of sequential characters in a random, incomprehensible manner, from which it is the display of the forms of texts</p>
             <div data-wow-delay="0.6s" class="wow row imgVideoContainer justify-content-center align-items-center">
-                <img src="images/play_icon.png" class="playIconVideo" alt="">
-                <a href="#">
+                <a href="#" class="d-flex align-items-center justify-content-center">
+                    <img src="images/play_icon.png" class="playIconVideo" alt="">
                     <img src="images/carInNature.png" alt="">
                 </a>
             </div>
@@ -195,8 +185,8 @@
                 </div>
             </div>
             <div data-wow-delay="0.4s" class="wow row imgVideoContainer justify-content-center align-items-center">
-                <img src="images/play_icon.png" class="playIconVideo" alt="">
-                <a href="#" class="col-10 col-lg-11"> 
+                <a href="#" class="col-10 col-lg-11 d-flex align-items-center justify-content-center"> 
+                    <img src="images/play_icon.png" class="playIconVideo" alt="">
                     <img src="images/carInNature.png" alt="">
                 </a>
             </div>
