--- a/index_EN.html
+++ b/index_EN.html
@@ -25,15 +25,10 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="index_EN.html">Main</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="briefAboutCompany_EN.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            About Company
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="briefAboutCompany_EN.html">About us</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ourServicesDropDown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Our Services
                         </a>
@@ -44,7 +39,7 @@
                             <a class="dropdown-item" href="cylinders_test_EN.html">Cylinder Test Center</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ourPartinersDropDown">
                         <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Partiners
                         </a>
@@ -75,15 +70,10 @@
                             <li class="nav-item">
                                 <a class="nav-link active" href="index_EN.html">Main</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="briefAboutCompany_EN.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    About Company
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="briefAboutCompany_EN.html">About us</a>
-                                </div>
+                            <li class="nav-item">
+                                <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown ourServicesDropDown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Our Services
                                 </a>
@@ -94,7 +84,7 @@
                                     <a class="dropdown-item" href="cylinders_test_EN.html">Cylinder Test Center</a>
                                 </div>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown ourPartinersDropDown">
                                 <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Partiners
                                 </a>
@@ -532,7 +522,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> 
             <!-- ########### End this is ourMaps Section 2 ########### -->
         </div>
     </div>
