--- a/news_EN.html
+++ b/news_EN.html
@@ -25,15 +25,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index_EN.html">Main</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="briefAboutCompany_EN.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            About Company
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="briefAboutCompany_EN.html">About us</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ourServicesDropDown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Our Services
                         </a>
@@ -44,7 +39,7 @@
                             <a class="dropdown-item" href="cylinders_test_EN.html">Cylinder Test Center</a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown ourPartinersDropDown">
                         <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Partiners
                         </a>
@@ -60,12 +55,12 @@
                         <a class="nav-link" href="jobs_EN.html">Jobs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cng_stations_EN.html">Contact Us</a>
+                        <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_EN.html">HSSE</a>
                     </li>
-                </ul>
+                </ul> 
             </div>
             <div class="NavbarMobile">
                 <div class="navMenuMobile" id="navMenuMobile">
@@ -75,15 +70,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="index_EN.html">Main</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="briefAboutCompany_EN.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    About Company
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="briefAboutCompany_EN.html">About us</a>
-                                </div>
+                            <li class="nav-item">
+                                <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown ourServicesDropDown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Our Services
                                 </a>
@@ -94,7 +84,7 @@
                                     <a class="dropdown-item" href="cylinders_test_EN.html">Cylinder Test Center</a>
                                 </div>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item dropdown ourPartinersDropDown">
                                 <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Partiners
                                 </a>
@@ -105,12 +95,12 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="news_EN.html">News</a>
-                            </li>
+                            </li> 
                             <li class="nav-item">
                                 <a class="nav-link" href="jobs_EN.html">Jobs</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="cng_stations_EN.html">Contact Us</a>
+                                <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_EN.html">HSSE</a>
