--- a/our_partners_AR.html
+++ b/our_partners_AR.html
@@ -37,10 +37,10 @@
                             <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                             <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
                             <a class="dropdown-item" href="cylinders_test_AR.html">مركز اختبار الأسطوانات</a>
-                        </div>
+                        </div> 
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle active" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             شركائنا
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -82,7 +82,7 @@
                                     <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                                     <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
                                     <a class="dropdown-item" href="cylinders_test_AR.html">مركز اختبار الأسطوانات</a>
-                                </div>
+                                </div> 
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle active" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
