--- a/index_AR.html
+++ b/index_AR.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="CSS/animate.css">
     <link rel="stylesheet" href="CSS/slick.css">
     <link rel="stylesheet" href="CSS/slick-theme.css">
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="CSS/main.css"> 
     <link rel="stylesheet" href="CSS/AR_style.css">
 </head>
 <body>
@@ -29,10 +29,12 @@
                         <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> -->
+                        <a class="nav-link">
                             خدماتنا
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown"> -->
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="cng_mobile_AR.html">CNG موبايل</a>
                             <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                             <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
@@ -40,10 +42,10 @@
                         </div> 
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link">
                             شركائنا
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="our_clients_AR.html">عملائنا</a>
                             <a class="dropdown-item" href="our_partners_AR.html">شركائنا</a>
                         </div>
@@ -74,10 +76,10 @@
                                 <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link">
                                     خدماتنا
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="cng_mobile_AR.html">CNG موبايل</a>
                                     <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                                     <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
@@ -85,10 +87,10 @@
                                 </div> 
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link">
                                     شركائنا
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="our_clients_AR.html">عملائنا</a>
                                     <a class="dropdown-item" href="our_partners_AR.html">شركائنا</a>
                                 </div>
