--- a/cng_stations_EN.html
+++ b/cng_stations_EN.html
@@ -25,14 +25,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index_EN.html">Main</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item"> 
                         <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                     </li>
                     <li class="nav-item dropdown ourServicesDropDown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link active">
                             Our Services
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="cng_mobile_EN.html">CNG Mobile</a>
                             <a class="dropdown-item" href="cng_stations_EN.html">CNG Stations</a>
                             <a class="dropdown-item" href="vehicles_converting_EN.html">Convert vehicles</a>
@@ -40,10 +40,10 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown ourPartinersDropDown">
-                        <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link">
                             Partiners
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="our_clients_EN.html">Our clients</a>
                             <a class="dropdown-item" href="our_partners_EN.html">Our strategic partners</a>
                         </div>
@@ -74,21 +74,21 @@
                                 <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                             </li>
                             <li class="nav-item dropdown ourServicesDropDown">
-                                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link active">
                                     Our Services
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="cng_mobile_EN.html">CNG Mobile</a>
                                     <a class="dropdown-item" href="cng_stations_EN.html">CNG Stations</a>
                                     <a class="dropdown-item" href="vehicles_converting_EN.html">Convert vehicles</a>
                                     <a class="dropdown-item" href="cylinders_test_EN.html">Cylinder Test Center</a>
                                 </div>
-                            </li>
+                            </li> 
                             <li class="nav-item dropdown ourPartinersDropDown">
-                                <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link">
                                     Partiners
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="our_clients_EN.html">Our clients</a>
                                     <a class="dropdown-item" href="our_partners_EN.html">Our strategic partners</a>
                                 </div>
@@ -205,7 +205,7 @@
             </div>
             <!-- ########### End this is cngStationsMaps Section 1 ########### -->
             <!-- ########### Start this is cngStationsMaps Section 2 ########### -->  <!-- ##### must be display none ##### -->
-            <div class="row cngStationsMaps_Section justify-content-between" id="cngStationsMaps_Section_2">
+            <!-- <div class="row cngStationsMaps_Section justify-content-between" id="cngStationsMaps_Section_2">
                 <div class="col-12 col-md-11 col-lg-3 cngStationsMaps_Section_Tabs">
                     <div class="nav row nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                         <a class="nav-link col-11 col-sm-5 col-lg-12 active main_tab" id="v-pills-masterGasStations_2-tab" data-toggle="pill" href="#v-pills-masterGasStations_2" role="tab" aria-controls="v-pills-masterGasStations_2" aria-selected="true">Master Gas stations</a>
@@ -250,14 +250,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- ########### End this is cngStationsMaps Section 2 ########### -->
         </div>
     </div>
     <!-- ============== End cngStationsMaps =============== -->
     <!-- =============== start the section control of cngStationsMaps =============== -->
     <!--  ################# this is controls pagination tabs ################# -->
-    <section class="cngStationsMaps_control">
+    <!-- <section class="cngStationsMaps_control">
         <div class="container">
             <ul class="change_sections d-flex align-items-center" id="change_sectionsCngStations"> 
                 <a href="#" id="change_sections_nextCngStations"><i class="fas fa-angle-right"></i></a>
@@ -266,7 +266,7 @@
                 <a href="#" id="change_sections_prevCngStations"><i class="fas fa-angle-left" ></i></a>
             </ul>
         </div>
-    </section>     
+    </section>      -->
     <!-- =============== End the section control of cngStationsMaps =============== -->
     <!-- ============== Start ourAdvantages =============== -->
     <div class="ourAdvantages">
