--- a/cylinders_test_AR.html
+++ b/cylinders_test_AR.html
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link active">
                             خدماتنا
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="cng_mobile_AR.html">CNG موبايل</a>
                             <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                             <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
@@ -40,10 +40,10 @@
                         </div> 
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link">
                             شركائنا
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="our_clients_AR.html">عملائنا</a>
                             <a class="dropdown-item" href="our_partners_AR.html">شركائنا</a>
                         </div>
@@ -74,10 +74,10 @@
                                 <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link active">
                                     خدماتنا
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="cng_mobile_AR.html">CNG موبايل</a>
                                     <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                                     <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
@@ -85,10 +85,10 @@
                                 </div> 
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link">
                                     شركائنا
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="our_clients_AR.html">عملائنا</a>
                                     <a class="dropdown-item" href="our_partners_AR.html">شركائنا</a>
                                 </div>
