--- a/our_partners_EN.html
+++ b/our_partners_EN.html
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                     </li>
                     <li class="nav-item dropdown ourServicesDropDown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link">
                             Our Services
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="cng_mobile_EN.html">CNG Mobile</a>
                             <a class="dropdown-item" href="cng_stations_EN.html">CNG Stations</a>
                             <a class="dropdown-item" href="vehicles_converting_EN.html">Convert vehicles</a>
@@ -40,10 +40,10 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown ourPartinersDropDown">
-                        <a class="nav-link dropdown-toggle active" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link active">
                             Partiners
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="our_clients_EN.html">Our clients</a>
                             <a class="dropdown-item" href="our_partners_EN.html">Our strategic partners</a>
                         </div>
@@ -74,10 +74,10 @@
                                 <a class="nav-link" href="briefAboutCompany_EN.html">About Company</a>
                             </li>
                             <li class="nav-item dropdown ourServicesDropDown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link">
                                     Our Services
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="cng_mobile_EN.html">CNG Mobile</a>
                                     <a class="dropdown-item" href="cng_stations_EN.html">CNG Stations</a>
                                     <a class="dropdown-item" href="vehicles_converting_EN.html">Convert vehicles</a>
@@ -85,10 +85,10 @@
                                 </div>
                             </li>
                             <li class="nav-item dropdown ourPartinersDropDown">
-                                <a class="nav-link dropdown-toggle active" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link active">
                                     Partiners
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="our_clients_EN.html">Our clients</a>
                                     <a class="dropdown-item" href="our_partners_EN.html">Our strategic partners</a>
                                 </div>
