--- a/vehicles_converting_AR.html
+++ b/vehicles_converting_AR.html
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link active">
                             خدماتنا
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="cng_mobile_AR.html">CNG موبايل</a>
                             <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                             <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
@@ -40,10 +40,10 @@
                         </div> 
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link">
                             شركائنا
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu">
                             <a class="dropdown-item" href="our_clients_AR.html">عملائنا</a>
                             <a class="dropdown-item" href="our_partners_AR.html">شركائنا</a>
                         </div>
@@ -74,10 +74,10 @@
                                 <a class="nav-link" href="briefAboutCompany_AR.html">عن الشركة</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link active">
                                     خدماتنا
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="cng_mobile_AR.html">CNG موبايل</a>
                                     <a class="dropdown-item" href="cng_stations_AR.html">CNG محطات</a>
                                     <a class="dropdown-item" href="vehicles_converting_AR.html">تحويل المركبات</a>
@@ -85,10 +85,10 @@
                                 </div> 
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#l" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link">
                                     شركائنا
                                 </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <div class="dropdown-menu">
                                     <a class="dropdown-item" href="our_clients_AR.html">عملائنا</a>
                                     <a class="dropdown-item" href="our_partners_AR.html">شركائنا</a>
                                 </div>
@@ -239,7 +239,7 @@
             </div>
             <!-- ########### End this is convertingMaps Section 1 ########### -->
             <!-- ########### Start this is convertingMaps Section 2 ########### -->  <!-- ##### must be display none ##### -->
-            <div class="row convertingMaps_Section justify-content-between" id="convertingMaps_Section_2">
+            <!-- <div class="row convertingMaps_Section justify-content-between" id="convertingMaps_Section_2">
                 <div class="col-12 col-md-11 col-lg-3 convertingMaps_Section_Tabs">
                     <div class="nav row nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                         <a class="nav-link col-11 col-sm-5 col-lg-12 active main_tab" id="v-pills-masterGasStations_2-tab" data-toggle="pill" href="#v-pills-masterGasStations_2" role="tab" aria-controls="v-pills-masterGasStations_2" aria-selected="true">محطات ماستر جاس</a>
@@ -284,14 +284,14 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- ########### End this is convertingMaps Section 2 ########### -->
         </div>
     </div>
     <!-- ============== End convertingMaps =============== -->
     <!-- =============== start the section control of convertingMaps =============== -->
     <!--  ################# this is controls pagination tabs ################# -->
-    <section class="convertingMaps_control"> 
+    <!-- <section class="convertingMaps_control"> 
         <div class="container">
             <ul class="change_sections d-flex align-items-center" id="change_sectionsConvert"> 
                 <a href="#" id="change_sections_nextConvert"><i class="fas fa-angle-right"></i></a>
@@ -300,7 +300,7 @@
                 <a href="#" id="change_sections_prevConvert"><i class="fas fa-angle-left" ></i></a>
             </ul>
         </div>
-    </section>     
+    </section>      -->
     <!-- =============== End the section control of convertingMaps =============== -->
     <!-- ============== Start InquiriesComplaints =============== -->
     <div class="InquiriesComplaints">
